--- a/style.css
+++ b/style.css
@@ -4,7 +4,10 @@ body{
 }
 h1{
     font-size: 50px;
-  
+
+}
+h2{
+    font-size: 40px;
 }
 .orange-color{
     color: darkred;
@@ -12,13 +15,14 @@ h1{
 .new{
     color: green;
 }
-section{
+.new-change{
     display: flex;
     margin-bottom: 150px;
 }
 .width{
     width: 50%;
-   padding-left: 5%;
+   padding-left: 3%;
+   
 }
 .width img{
     width: 100%;
@@ -40,4 +44,47 @@ section{
     background-repeat: no-repeat;
     background-position: right;
 }
+.sabbir{
+    color: deeppink;
 }
+.sabbir1{
+    color: purple;
+}
+.sabbir2{
+    color: royalblue;
+}
+.mirza{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+   background-position: left;
+}
+.mirza1{
+    color: navy;
+}
+.mirza2{
+     color: red;
+}
+#rakib{
+    border-left: 7px solid;
+    border-image: linear-gradient(blue, cyan);
+    border-image-slice: 1;
+}
+.experiences{
+    width: 40%;border-radius: 10px;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-left: 20px;
+    box-shadow: 10px 10px 40px gray;
+}
+#exp{
+    text-align: center;
+} 
+#full-stack{
+    border-left: 7px solid;
+    border-image: linear-gradient(orange,red);
+    border-image-slice: 1;
+}
+footer p{
+    text-align: center;
+}
+
